--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>beste rekenmachine</h1>
     <body>
         <div>
           <button class="themeToggle" onclick="changeBackground()">Dark mode</button>
@@ -37,6 +38,6 @@
             </div>
             </div>
     </section>
-    <script src="main.js"></script>
+    <script src="evenhandler.js"></script>
 </body>
 </html>
