--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="btn-number">8</div>
                 <div class="btn-number">9</div>
                 <div class="btn-equal">=</div>
-                <div>.</div>
+                <div></div>
                 <div class="btn-number">0</div>
             </div>
             </div>
